--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -11,15 +11,19 @@
   },
   "dependencies": {
     "@shadcn/ui": "^0.0.4",
-    "@tailwindcss/vite": "^4.0.17",
+    "@tailwindcss/vite": "^4.1.8",
+    "@types/three": "^0.177.0",
     "bootstrap": "^5.3.3",
     "framer-motion": "^12.6.2",
+    "gsap": "^3.13.0",
+    "locomotive-scroll": "^4.1.4",
     "lucide-react": "^0.485.0",
-    "portfolio": "file:",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "three": "^0.177.0",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -33,7 +37,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.17",
+    "tailwindcss": "^4.1.8",
     "vite": "^6.2.0"
   }
 }
