--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.4",
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/vite": "^4.1.8",
     "@types/three": "^0.177.0",
     "bootstrap": "^5.3.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.6.2",
     "gsap": "^3.13.0",
     "locomotive-scroll": "^4.1.4",
@@ -22,6 +25,7 @@
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "tailwind-merge": "^3.4.0",
     "three": "^0.177.0",
     "typewriter-effect": "^2.21.0"
   },
